# powerpoint

./: .coverage  .gitignore  AGENTS.md  Dockerfile  IMPROVEMENTS.md  PHASE1_CHANGES.md  PHASE1_COMPLETE.md  PHASE1_SUMMARY.txt  PHASE2_COMPLETE.md  PHASE2_SUMMARY.txt  PHASES_1_2_COMPLETE.md  README.md  bench.py  main.py  pyproject.toml
pages/: image_converter.py  pptx_inverter.py
src/pp/: __init__.py  app.py  cli.py
src/pp/core/: __init__.py  image_processor.py  inverter.py  slide_processor.py  validation.py
src/pp/models/: __init__.py  config.py
src/pp/utils/: __init__.py  file_handler.py  preview.py
tests/: __init__.py  conftest.py  test_app.py  test_cli.py  test_config.py  test_image_processor.py  test_slide_processor.py  test_transparency.py  test_validation.py
tests/fixtures/: Psalm 134 (DNP) wit copy 101.pptx  hagar-presentatie.pptx
